--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/pacmanUtils.js"></script>
+  <script src="js/pacman.js"></script>
+  <script src="js/game.js" defer></script>
   <title>Pac man</title>
 </head>
 
 <body>
-  <div id="gameBoard"></div>
+  <div id="gameBoard">
+  </div>
 </body>
 
 </html>
