--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/pacmanUtils.js"></script>
+  <script src="js/eventsUtils.js"></script>
   <script src="js/input.js"></script>
   <script src="js/pacman.js"></script>
   <script src="js/game.js" defer></script>
