--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/eventsUtils.js"></script>
   <script src="js/gameUtils.js"></script>
+  <script src="js/layout.js"></script>
+  <script src="js/food.js"></script>
   <script src="js/input.js"></script>
   <script src="js/pacman.js"></script>
   <script src="js/game.js" defer></script>
@@ -17,7 +19,7 @@
 <body>
   <div id="canvas">
     <div id="scoreBoard"></div>
-    <div id="gameBoard"> </div>
+    <div id="gameBoard"></div>
     <button id="fullscreenToggler"> </button>
   </div>
 </body>
