--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/eventsUtils.js"></script>
   <script src="js/gameUtils.js"></script>
+  <script src="js/theme.js"></script>
   <script src="js/layout.js"></script>
+  <script src="js/wall.js"></script>
   <script src="js/food.js"></script>
+  <script src="js/powerPellet.js"></script>
   <script src="js/input.js"></script>
   <script src="js/pacman.js"></script>
   <script src="js/game.js" defer></script>
