Added sound , start screen and pause option

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/eventsUtils.js"></script>
   <script src="js/gameUtils.js"></script>
+  <script src="js/sound.js"></script>
   <script src="js/theme.js"></script>
   <script src="js/layout.js"></script>
   <script src="js/wall.js"></script>
@@ -20,10 +21,10 @@
 </head>
 
 <body>
+  <div id="pacman-logo"></div>
+  <!-- <div id="demo-movement">hi</div> -->
+  <button id="play-button">PLAY</button>
   <div id="canvas">
-    <div id="scoreBoard"></div>
-    <div id="gameBoard"></div>
-    <button id="fullscreenToggler"> </button>
   </div>
 </body>
 
