Added ghost and AI for ghost movement

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <script src="js/sound.js"></script>
   <script src="js/theme.js"></script>
   <script src="js/layout.js"></script>
+  <script src="js/ghostAI.js"></script>
+  <script src="js/ghost.js"></script>
   <script src="js/wall.js"></script>
   <script src="js/food.js"></script>
   <script src="js/powerPellet.js"></script>
